[tool.poetry]
name = "kmk-id75"
package-mode = false
description = ""
authors = ["Adam Huganir <adam@huganir.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
circuitpython-stubs = "^9.1.0"
adafruit-circuitpython-neopixel = "^6.3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
